icons visibility fixed!

--- a/src/app/ui/theme/layout/components/footer/footer.component.scss
+++ b/src/app/ui/theme/layout/components/footer/footer.component.scss
@@ -27,14 +27,25 @@
   }
 }
 
+.footer-links {
+  display: flex;
+}
+
 .footer-link {
   margin: 0 0.15rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-icon {
   width: 1.25rem;
   height: 1.25rem;
   line-height: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &:hover {
     color: $color-primary;
